--- a/charts/rasa-x/templates/rasa-config-files-configmap.yaml
+++ b/charts/rasa-x/templates/rasa-config-files-configmap.yaml
@@ -11,6 +11,10 @@ data:
     {{- with .Values.rasa.additionalChannelCredentials }}
     {{ toYaml . | nindent 4 }}
     {{- end }}
+    socketio:
+      user_message_evt: user_uttered
+      bot_message_evt: bot_uttered
+      session_persistence: true
   rasa-endpoints: |
     models:
       url: ${RASA_MODEL_SERVER}
